@@ -26,6 +26,7 @@ Minor changes
  * Updates to setup.py and desktop files
  * Recreate dataset now works if dialog hasn't been opened already
  * Restore dock layout when using Python3
+ * Fix undo after loading stylesheet/custom definitions
 
 Changes in 1.22:
  * Add option to ignore white space following delimiters when importing CSVs
